kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eventrra-service
  namespace: eventrra
spec:
  selector:
    app: eventrra-app
  ports:
    - port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: eventrra
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
